--- a/src/partials/_dark-mode.scss
+++ b/src/partials/_dark-mode.scss
@@ -1,5 +1,5 @@
-@use './variables' as v;
-@use './mixins' as m;
+@use "./variables" as v;
+@use "./mixins" as m;
 /* Dark Mode Styles */
 
 .dark {
@@ -27,12 +27,12 @@
   .toggle-switch a,
   .logo-type {
     color: #fff !important;
-
     .icon {
       display: none;
       margin-right: 8px;
     }
   }
+
   .signup-container {
     border-radius: 20px;
     border: 0.5px solid v.$color-gray-2;
@@ -40,6 +40,19 @@
     box-shadow: 0px 20px 60px -6px rgba(40, 40, 40, 0.08);
     width: 80%;
     margin: 0 auto;
+  }
+
+  .question-toggle {
+    background: v.$color-gray-1;
+    box-shadow: 0px 20px 60px -6px rgba(40, 40, 40, 0.08);
+    color: #fff;
+    margin: 0 auto;
+    .question-title {
+      color: white !important;
+    }
+  }
+  a.dropdown-link {
+    background-color: v.$primary-black;
   }
   footer,
   section,
@@ -63,5 +76,10 @@
   }
   .select-container {
     background-color: #fff;
+  }
+  @include m.breakpoint("small") {
+    .navbar-li {
+      border-bottom: solid 1px #fff !important;
+    }
   }
 }
