--- a/src/partials/_dropdown-menu.scss
+++ b/src/partials/_dropdown-menu.scss
@@ -1,3 +1,5 @@
+@use "./variables" as v;
+
 .dropdown-container {
   padding: 8px;
   padding-bottom: 56px;
@@ -20,7 +22,7 @@
   gap: 8px;
   padding: 8px 12px;
   border-radius: 6px;
-  background-color: #6366f1;
+  background-color: v.$primary-blue;
   color: #a78bfa;
   transition: background-color 0.2s;
   border: none;
