--- a/src/partials/_faq.scss
+++ b/src/partials/_faq.scss
@@ -43,6 +43,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+  padding: 0 20px;
 }
 
 .icon-chevron {
